# openai-agents-sdk-deep-research

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile-db  POSTGRES_COLLECTOR.md  README.md  create_search_results_table.py  docker-compose.yml  plan.json  plan_fixed.json  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py  setup.py  test_runner.py
docs/: langfuse_integration.md
examples/: README_REACT_SEARCH.md  README_REACT_SEARCH_WITH_TOPICS.md  deep_research_example.py  react_search_example.py  react_search_old_example.py  react_search_simple_example.py  react_search_with_research_topics.py  research_pipeline.py  run_pipeline.py  search_v2_example.py  search_v3_example.py  search_v4_example.py  sequential_tools_example.py  test_langfuse_integration.py  web_search_example.py
examples/sequential_search_agent/: README.md  agent.py  run.py
examples/websearch_agent/: README.md  __init__.py  agent.py  run.py
results/: critique.md  plan.json  report.md
src/clarification_agent/: README.md  __init__.py  agent.py  run.py
src/deep_research/: __init__.py  langfuse_integration.py  step1.py  step2.py  step3.py  step4.py  utils.py
src/deep_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/research_orchestrator/: agent.py  run.py
src/sequential_search_agent/: README.md  __init__.py  agent.py  run.py
src/tools/: __init__.py  get_sources.py
src/utils/: helpers.py
src/websearch_agent/: README.md  __init__.py  agent.py  run.py
tests/: conftest.py
tests/integration/: test_step1_integration.py  test_step2_integration.py
(+9 files in other folders)
